@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.393 2005/09/23 13:48:57 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.394 2005/09/28 13:40:33 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
+
+  26 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/net/server/gliserv.py:
+  XMLRPC mojo
 
   22 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIArchitectureTemplate.py:
